layout changes, fixed footer, fixed button wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -314,10 +314,6 @@ body {
   min-height: 100vh;
 }
 
-.container-all {
-  height: 1428px;
-}
-
 .nav_arrow {
   position: absolute;
   top: 20px;
@@ -336,7 +332,6 @@ body {
 }
 
 .hero_image {
-  position: absolute;
   width: 100%;
 }
 .hero_image .hero_image-one {
@@ -347,7 +342,7 @@ body {
 
 .restaurant_menu-one {
   position: relative;
-  top: 222px;
+  top: -50px;
   background-color: #f6f6f6;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
@@ -418,7 +413,7 @@ body {
   transform: translate(-15px, 0px);
 }
 .menu_blocks-all .menu_blocks:hover .check-mark {
-  transform: rotateZ(360deg) scaleX(1);
+  transform: rotateZ(360deg);
 }
 
 .menu_blocks_heading-info {
@@ -511,8 +506,10 @@ body {
 }
 
 footer {
+  position: relative;
   background-color: #3b3b3b;
   padding: 5px 10px 20px 10px;
+  margin-top: -50px;
 }
 footer .text-link-restaurant {
   color: white;
@@ -546,17 +543,11 @@ footer .foot-list-restaurant .foot-image-restaurant {
 }
 
 @media (min-width: 635px) {
-  .container-all {
-    height: 1302px;
-  }
   .hero_image .hero_image-one {
     object-fit: cover;
     object-position: 0px -146px;
     width: 100%;
     height: 475px;
-  }
-  .restaurant_menu-one {
-    top: 238px;
   }
   .heading_heart {
     margin: auto;
@@ -609,20 +600,11 @@ footer .foot-list-restaurant .foot-image-restaurant {
   }
 }
 @media (min-width: 992px) {
-  .container-all {
-    height: 1042px;
-  }
   .hero_image .hero_image-one {
     object-fit: cover;
-    object-position: 0px -258px;
+    object-position: 0px -89px;
     width: 100%;
     height: 475px;
-  }
-  .restaurant_menu-one {
-    top: 358px;
-  }
-  .block-section-wide {
-    margin: 40px;
   }
   .whole_block-section {
     max-width: 992px;
@@ -630,11 +612,12 @@ footer .foot-list-restaurant .foot-image-restaurant {
   .whole_block-section .menu_blocks-all {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     max-width: 992px;
   }
   .whole_block-section .menu_blocks-all .menu_blocks {
-    min-width: 305px;
-    max-width: 335px;
+    width: 315px;
+    min-width: 300px;
   }
 }
 body {
